--- a/src/components/HomeCarousel/HomeCarousel.css
+++ b/src/components/HomeCarousel/HomeCarousel.css
@@ -1,7 +1,64 @@
 .homeCarousel{
-    height: 100vh;
+    height: 80vh;
     width: 100vw;
     background-image: url("../../assets/background.png");
     background-size: cover;
     background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
+
+.topBar{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+    margin-top: 5rem;
+    padding: 0 4rem;
+    width: 100%;
+    font-weight: 500;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+}
+
+
+
+
+/*  */
+
+.carousel{
+    width: 100vw;
+    max-height: 580px;
+    overflow: hidden;
+    margin-top: auto;
+}
+
+  
+  .active.center {
+    transform: scale(1);
+    overflow: hidden;
+    -webkit-filter: grayscale(0); /* Safari 6.0 - 9.0 */
+      filter: grayscale(0);
+  }
+  .active {
+    transform: scale(.5);
+    overflow: hidden;
+    transition: .6s ease;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+      filter: grayscale(100%);
+  }
+
+  /*  */
+
+  .swipe{
+    display: flex;
+    justify-content: flex-end;
+    align-items: baseline;
+    color: white;
+    width: 100%;
+    margin-bottom: 1rem;
+    padding-right: 2rem;
+    gap: 0.5rem;
+  }
