--- a/src/pages/Events/card/Card.css
+++ b/src/pages/Events/card/Card.css
@@ -32,12 +32,15 @@
 .register{
     margin: 30px 0 0 20%; 
     font-family: Stellar;
-    height: 35px;
+    height: 40px;
     font-size: 22px;
     width: 60%;
     border-radius: 8px;
     bottom: 50px;
+  
+    border: 2px solid black;
 }
+
 .event-name{
     color: #D9D9D9;
     font-size: 24px;
