--- a/src/components/HomeCarousel/HomeCarousel.css
+++ b/src/components/HomeCarousel/HomeCarousel.css
@@ -37,17 +37,22 @@
 
   
   .active.center {
-    transform: scale(1);
     overflow: hidden;
     -webkit-filter: grayscale(0); /* Safari 6.0 - 9.0 */
       filter: grayscale(0);
   }
+
+  .active.center .CarouselCard{
+    transform: scale(1) !important;
+  }
   .active {
-    transform: scale(.5);
     overflow: hidden;
     transition: .6s ease;
     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
       filter: grayscale(100%);
+  }
+  .active  .CarouselCard{
+    transform: scale(0.8 );
   }
 
   /*  */
