--- a/src/components/HomeCarousel/HomeCarousel.css
+++ b/src/components/HomeCarousel/HomeCarousel.css
@@ -38,21 +38,28 @@
   
   .active.center {
     overflow: hidden;
-    -webkit-filter: grayscale(0); /* Safari 6.0 - 9.0 */
-      filter: grayscale(0);
+    /* -webkit-filter: grayscale(0); 
+      filter: grayscale(0); */
   }
 
   .active.center .CarouselCard{
     transform: scale(1) !important;
+    clip-path: polygon(0 13%, 100% 12%, 100% 100%, 0% 100%) !important; 
   }
   .active {
     overflow: hidden;
     transition: .6s ease;
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-      filter: grayscale(100%);
+    /* -webkit-filter: grayscale(100%); 
+      filter: grayscale(100%); */
   }
+
   .active  .CarouselCard{
-    transform: scale(0.8 );
+    clip-path: polygon(0 0, 100% 12%, 100% 100%, 0% 100%);
+  }
+
+  .active.center ~ div .CarouselCard {
+    /* transform: scale(0.8 ); */
+    clip-path: polygon(0 12%, 100% 0, 100% 100%, 0% 100%) !important;
   }
 
   /*  */
