--- a/src/components/IndividualEvents/IndividualEvent.css
+++ b/src/components/IndividualEvents/IndividualEvent.css
@@ -16,7 +16,6 @@
 
 .logo-wrapper{
     width: 100%;
-    height: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,9 +28,9 @@
 
 .event-wrapper{
     width: 90%;
-    height: 80%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 
 }
 
