--- a/src/components/home-compo/main.css
+++ b/src/components/home-compo/main.css
@@ -15,7 +15,13 @@
     flex-direction: column;
     gap: 10px;
     align-items: center; 
-    justify-content: space-between; 
+    justify-content: center; 
+}
+
+.logo {
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
 
 .inner-container {
@@ -24,18 +30,21 @@
     justify-content: center;
     align-items: center;
     gap: 560px;
-    margin-top: 20px;
+    margin-top: 150%;
+    margin-left: -50px;
 }
 
 .youthopia {
     width: 1100px;
     height: 400px;
+    margin-top: 180px;
 }
+
 .clg-logo {
     margin: 10px;
 }
 
-.left {
+/* .left {
     align-self: flex-start;
 }
 
@@ -45,7 +54,7 @@
 
 .right {
     align-self: flex-end;
-}
+} */
 
 .rndm-images .star-1 {
     position: absolute;
