--- a/src/components/sponsors/sponsors.css
+++ b/src/components/sponsors/sponsors.css
@@ -1,23 +1,26 @@
 .main-sponsor {
     height: 42vh;
     width: 100vw;
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(30,25,191,1) 33%, rgba(186,24,88,1) 60%);
+    position: relative;
+    background: url('../../assets/Rectangle12382.png');
+    background-size:cover;
+    background-color: #000;
+    background-position: center;
+
+    /* background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(30,25,191,1) 33%, rgba(186,24,88,1) 60%); */
     background-repeat: no-repeat;
     overflow: hidden;
     text-align: center;
     justify-content: center;
-
 }
 
 .main-container {
     height: 42vh;
     width: 100vw;
-    background: linear-gradient(271deg, rgba(0, 0, 0, 0.51) 0.89%, rgba(0, 0, 0, 0.00) 104.06%);
-    box-shadow: 0px 4px 100px 300px rgba(0, 0, 0, 0.25);
-    background-repeat: no-repeat;
 }
 
 h2 {
+    margin-top: 20px;
     color: #fff;
 }
 
@@ -40,6 +43,7 @@ h2 {
     width: 160px;
     text-align: center;
     justify-content: center;
+    /* background-color: #fff; */
 }
 
 .sponsor-logo {
