--- a/src/pages/Events/Events.css
+++ b/src/pages/Events/Events.css
@@ -1,28 +1,31 @@
 .events {
     background-image: url('../../assets/background.png');
+
     height: 100vh;
     width: 100%;
     background-size: 100% 100%;
     font-family: Stellar;
     position: fixed;
     overflow-y: scroll;
+    
 }
 
 .youImg {
-    margin: 10px 10px 10px 38%;
+    margin: 10px 0px 0px 38%;
 }
 
 .secNavBar {
-    margin: 10px 10px 10px 25%;
+    margin: 0px 10px 0px 25%;
     color: #F8F8F8;
     display: flex;
 }
 
 .secNavBar>.a {
     color: #F8F8F8;
-    margin: 70px;
+    margin:0 70px 0 70px;
     font-size: 32px;
     position: relative;
+    cursor: pointer;
 
     &::after {
         content: '';
@@ -40,10 +43,12 @@
         transform: translateX(-50%);
         /* Center the underline */
         transform-origin: 50% 50%;
+        
     }
 
     &:hover::after {
         width: 80%;
+        
     }
 }
 
