--- a/src/pages/Events/Events.css
+++ b/src/pages/Events/Events.css
@@ -1,5 +1,5 @@
 .events {
-    background-image: url('../../assets/background.png');
+    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.7)), url('../../assets/background.png');
 
     height: 100vh;
     width: 100%;
