feat: added the individual event link to the event cards

--- a/src/pages/Events/Events.css
+++ b/src/pages/Events/Events.css
@@ -1,6 +1,6 @@
 .events {
     background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.7)), url('../../assets/background.png');
-
+    position: relative;
     height: 100vh;
     width: 100%;
     background-size: 100% 100%;
@@ -11,7 +11,7 @@
 }
 
 .youImg {
-    margin: 10px 0px 0px 38%;
+    margin: 10vh 0px 0px 38%;
 }
 
 .secNavBar {
