--- a/src/components/IndividualEvents/IndividualEvent.css
+++ b/src/components/IndividualEvents/IndividualEvent.css
@@ -11,6 +11,7 @@
     align-items: center;
     font-family: sans-serif;
     overflow-x: hidden;
+    
 
 }
 
@@ -20,6 +21,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 8vh;
 }
 
 .logo{
