--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,7 +10,6 @@
     justify-content: space-between;
     width: 100vw;
     font-family: Stellar;
-    backdrop-filter: blur(10px);
 }
 
 a {
@@ -24,6 +23,9 @@ a {
     line-height: normal;
 }
 
+.active {
+    color: red;
+}
 .buttonsNav {
     display: flex;
     gap: 2rem;
