--- a/src/pages/Events/card/Card.css
+++ b/src/pages/Events/card/Card.css
@@ -30,14 +30,20 @@
             -webkit-background-clip: text;
 }
 .register{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 30px 0 0 20%; 
     font-family: Stellar;
+    font-size: 10px;
     height: 40px;
+    color: black;
     font-size: 22px;
     width: 60%;
-    border-radius: 8px;
+    border-radius: 10px;
+    margin-left: 0;
     bottom: 50px;
-  
+    background-color: #f8f8f8;
     border: 2px solid black;
 }
 
@@ -53,5 +59,5 @@
     align-items: end;
 }
 .content{
-    margin: 10px;
+    margin: 0px;
 }
