--- a/src/components/home-compo/main.css
+++ b/src/components/home-compo/main.css
@@ -7,30 +7,31 @@
     filter: brightness(140%);
     overflow: hidden;
     filter: contrast(1);
-    padding-top: 60px;
 }
 
 .logo-container {
+    width: 100vw;
+    height: 90vh;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 50px;
     align-items: center; 
     justify-content: center; 
 }
 
 .logo {
-    align-items: center;
+    width: 90vw;
+    height: 30vh;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
 .inner-container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 500px;
-    margin-top: 120%;
     margin-left: -50px;
 }
 
