--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -1,4 +1,4 @@
-.LoginContainer{
+.signUp-container{
     background-image: url(../../assets/background.png);
     display: flex;
     justify-content: center;
@@ -9,7 +9,7 @@
     padding: 0;
 
 }
-.Login{
+.signUp{
     position: relative;
     background-color: rgba(0, 0, 0, 0.71);
     border-radius: 138px;
@@ -25,17 +25,19 @@
     margin-top: 40px;
     /* margin: 0vh 20vh 0vh 25vh; */
 }
-.Login>form{
+.signUp>form{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 60%;
     margin-top: 30px;
 
 }
 input{
     background-color: transparent;
-    width: 58%;
     padding-left: 20px;
+    width: 100%;
     height: 50px;
     margin: 10px;
     border-radius: 30px;
@@ -43,9 +45,11 @@ input{
     font-size: 24px;
     border: 2px solid #f8f8f8;
 }
-.login-details{
+.name>input{
+    width: 48%;
+}
+.name{
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -54,7 +58,6 @@ label{
     font-size: 15px;
     font-family: Stellar-Light;
     margin-top: 20px;
-    margin-left: 30%;
 }
 label>input{
     margin-top: 0%;
@@ -64,16 +67,4 @@ label>input{
     border-radius: 50%;
     height: 18px;
     width: 18px;
-}
-
-.login-btn{
-    border-radius: 35px;
-    border: 1px solid #FFF;
-    width: 130px;
-    height: 41.43px;
-    font-size: 18px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
 }
