--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -77,3 +77,37 @@ label>input{
     align-items: center;
     margin-top: 50px;
 }
+
+.star-1{
+    position: absolute;
+    top: 0;
+    right: 2%;
+
+}
+
+.star-3{
+    position: absolute;
+    top: 18%;
+    left: 20%;
+    width: 25px;
+}
+
+.star-2{
+    position: absolute;
+    bottom: 3%;
+    left: 0;
+
+}
+
+.line-4{
+    position: absolute;
+    bottom: 34%;
+    right: -4%;
+}
+
+.ellipse{
+    position: absolute;
+    bottom: 30%;
+    right: 4%;
+
+}
