--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -58,13 +58,35 @@ label{
     font-size: 15px;
     font-family: Stellar-Light;
     margin-top: 20px;
+    margin-right: 190px;
 }
 label>input{
     margin-top: 0%;
-    background-color: transparent;
     appearance: none;
     -webkit-appearance: none;
     border-radius: 50%;
     height: 18px;
     width: 18px;
 }
+
+.star-1{
+    position: absolute;
+    top: 0;
+    right: 2%;
+
+}
+
+.star-3{
+    position: absolute;
+    top: 18%;
+    left: 20%;
+    width: 25px;
+}
+
+.star-2{
+    position: absolute;
+    bottom: 3%;
+    left: 0;
+
+}
+
