Video and Coming Soon Component Added on the Home Page

--- a/src/components/AboutUsImgBox/AboutUsImgBox.css
+++ b/src/components/AboutUsImgBox/AboutUsImgBox.css
@@ -18,6 +18,11 @@
     border-radius: 16px;
 }
 
+.convenor .img-box img {
+    width: 170px;
+    height: 180px;
+    border-radius: 16px;
+}
 .convenor p {
     color: #fff;
     font-weight: 500;
