--- a/src/components/MapComponent/MapComponent.css
+++ b/src/components/MapComponent/MapComponent.css
@@ -1,27 +1,22 @@
-.mapmain{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background: url('../../assets/Rectangle12382.png');
-    background-size:cover;
-    background-color: #000;
-    background-position: center;
-
-    /* background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(30,25,191,1) 33%, rgba(186,24,88,1) 60%); */
-    background-repeat: no-repeat;
-    overflow: hidden;
-    text-align: center;
-    justify-content: center;
-    
+.mapmain {
+  display: flex;
+  flex-direction: column;
+  background: url("../../assets/Rectangle12382.png");
+  background-size: cover;
+  background-color: #000;
+  background-position: center;
+  /* background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(30,25,191,1) 33%, rgba(186,24,88,1) 60%); */
+  background-repeat: no-repeat;
+  overflow: hidden;
+  text-align: center;
+  justify-content: center;
 }
-.map-heading{
-    color: #D9D9D9;
-
-font-size: 25px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-margin-top: 2rem;
-margin-bottom:2rem;
+.map-heading {
+  color: #d9d9d9;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
