--- a/src/components/sponsors/sponsors.css
+++ b/src/components/sponsors/sponsors.css
@@ -10,8 +10,12 @@
     /* background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(30,25,191,1) 33%, rgba(186,24,88,1) 60%); */
     background-repeat: no-repeat;
     overflow: hidden;
-    text-align: center;
+    /* text-align: center; */
     justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* width: 100vw; */
 }
 
 .main-container {
@@ -27,7 +31,7 @@ h2 {
 }
 
 .arrow {
-    margin: 10px 0 0 49%;
+    margin: 10px 0 0 0;
     align-items: center;
     justify-content: center;
 }
