--- a/src/pages/Events/Events.css
+++ b/src/pages/Events/Events.css
@@ -83,3 +83,92 @@
     
     
 }
+
+
+
+
+
+
+/*  */
+/*  */
+/*  */
+.registre-container{
+    background-image: url(../../assets/background.png);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+
+}
+.registre{
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.71);
+    border-radius: 138px;
+    height: 90vh;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: Stellar;
+    font-size: 32px;
+    color: #f8f8f8;
+    margin-top: 40px;
+    /* margin: 0vh 20vh 0vh 25vh; */
+}
+
+.registre-text{
+    width: 80%;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 600;
+}
+
+.registre-btn{
+    border-radius: 35px;
+    border: 1px solid #FFF;
+    width: 180px;
+    height: 43.43px;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.star-1{
+    position: absolute;
+    top: 0;
+    right: 2%;
+
+}
+
+.star-3{
+    position: absolute;
+    top: 18%;
+    left: 20%;
+    width: 25px;
+}
+
+.star-2{
+    position: absolute;
+    bottom: 3%;
+    left: 0;
+
+}
+
+.line-4{
+    position: absolute;
+    bottom: 34%;
+    right: -4%;
+}
+
+.ellipse{
+    position: absolute;
+    bottom: 30%;
+    right: 4%;
+
+}
