--- a/src/pages/Registration/Registration.css
+++ b/src/pages/Registration/Registration.css
@@ -23,13 +23,14 @@
     font-size: 32px;
     color: #f8f8f8;
     margin-top: 40px;
+    gap: 60px;
     /* margin: 0vh 20vh 0vh 25vh; */
 }
 
 .registre-text{
     width: 80%;
     text-align: center;
-    font-size: 40px;
+    font-size: 65px;
     font-weight: 600;
 }
 
@@ -42,7 +43,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
 }
 
 .star-1{
@@ -77,4 +77,8 @@
     bottom: 30%;
     right: 4%;
 
+}
+
+.youthopia-logo{
+    width: 360px;
 }
