--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -31,7 +31,7 @@
 .about-container-8 {
     height: 40vh;
     width: 100vw;
-    background-image: url(../../assets/GroupNew.svg);
+    background-image: url(../../assets/image103.svg);
     background-size: cover;
     background-repeat: no-repeat;
     filter: brightness(140%);
@@ -87,7 +87,7 @@
 .box-1, .box-2, .box-3,
 .box-4, .box-5, .box-6,
 .box-7, .box-8 .sub-hd p {
-    font-size: 19px;
+    font-size: 22px;
 }
 
 .box-1 .convenors-cnt {
