--- a/src/components/AboutUsImgBox/AboutUsImgBox.css
+++ b/src/components/AboutUsImgBox/AboutUsImgBox.css
@@ -13,14 +13,15 @@
     background-color: #ffffff;
     align-items: center;
     justify-content: center;
-    height: 180px;
-    width: 170px;
     border-radius: 16px;
 }
 
 .convenor .img-box img {
-    width: 170px;
-    height: 160px;
+    /* width: 170px;
+    height: 160px; */
+    height: 180px;
+    object-fit: cover;
+    aspect-ratio: 1/1;
     border-radius: 16px;
 }
 .convenor p {
