--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,7 +1,188 @@
-.about-container-1 {
+.about>.mainBody{
+    background-image: url("../../assets/backgroungAbout/image102.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: brightness(140%);
+    overflow-y: hidden;
+    height: 100vh;
+    background-color: black;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    filter: contrast(1);
+    gap: 5rem;
+    padding-bottom: 1rem;
+    width: fit-content;
+    padding-top: 3rem;
+}
+
+.about>.mainBody>.innerDiv{
+    overflow-y: scroll;
+}
+
+.youthopia-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.youthopia-logo img {
+    height: 120px;
+}
+.heading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.heading p {
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    color: #fff;
+}
+
+.box .sub-hd {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem 0;
+}
+
+.box .sub-hd p {
+    font-size: 22px;
+}
+
+.box .convenors-cnt {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 28vh;
+}
+
+.box .convenors-cnt {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 29vh;
+}
+
+.box .convenors-cnt {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 27vh;
+}
+
+.box .convenors-cnt {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 28vh;
+} 
+
+.box .convenors-cnt {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 27vh;
+} 
+
+.box .convenors-cnt {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 29vh;
+}
+
+.box .convenors-cnt {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 27vh;
+} 
+
+.box .convenors-cnt {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 29vh;
+} 
+.about-container {
+    /* height: 126vh;
+    width: 100vw; */
+    /* background-image: url("../../assets/backgroungAbout/image102.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: brightness(140%);
+    overflow: hidden;
+    filter: contrast(1); */
+    align-items: center;
+    justify-content: center;
+    /* background-color: black; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-position: center;
+}
+
+/* 
+
+
+
+.about-container-2 {
+    height: 126vh;
+    width: 100vw;
+    background-image: url("../../assets/backgroungAbout/image103.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: brightness(140%);
+    overflow: hidden;
+    filter: contrast(1);
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-position: center;
+}
+.about-container-3{
+    height: 126vh;
+    width: 100vw;
+    background-image: url("../../assets/backgroungAbout/image104.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: brightness(140%);
+    overflow: hidden;
+    filter: contrast(1);
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-position: center;
+}
+.about-container-2, .about-container-3,
+.about-container-4, .about-container-5, .about-container-6,
+.about-container-7 {
     height: 100vh;
     width: 100vw;
-    background-image: url(../../assets/image102.svg);
+    background-image: url(../../assets/image103.svg);
     background-size: cover;
     background-repeat: no-repeat;
     filter: brightness(140%);
@@ -11,7 +192,36 @@
     justify-content: center;
     background-color: black;
 }
-
+.about-container-2, .about-container-3,
+.about-container-4, .about-container-5, .about-container-6,
+.about-container-7 {
+    height: 100vh;
+    width: 100vw;
+    background-image: url(../../assets/image103.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: brightness(140%);
+    overflow: hidden;
+    filter: contrast(1);
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+}
+.about-container-2, .about-container-3,
+.about-container-4, .about-container-5, .about-container-6,
+.about-container-7 {
+    height: 100vh;
+    width: 100vw;
+    background-image: url(../../assets/image103.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: brightness(140%);
+    overflow: hidden;
+    filter: contrast(1);
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+}
 .about-container-2, .about-container-3,
 .about-container-4, .about-container-5, .about-container-6,
 .about-container-7 {
@@ -144,4 +354,4 @@
     align-items: center;
     justify-content: center;
     height: 29vh;
-}
+} */
