--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -1,92 +1,107 @@
-.signUp-container{
-    background-image: url(../../assets/background.png);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
+.signUp-container {
+  background-image: url(../../assets/background.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 150vh;
+  margin: 0;
+  padding: 0;
+}
 
+.youthopia-logo {
+  margin-top: 40px;
 }
-.signUp{
-    position: relative;
-    background-color: rgba(0, 0, 0, 0.71);
-    border-radius: 138px;
-    height: 90vh;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: Stellar;
-    font-size: 32px;
-    color: #f8f8f8;
-    margin-top: 40px;
-    /* margin: 0vh 20vh 0vh 25vh; */
-}
-.signUp>form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 60%;
-    margin-top: 30px;
 
+.signup-form {
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.75);
+  border-radius: 138px;
+  height: 110vh;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: Stellar;
+  font-size: 32px;
+  color: #f8f8f8;
+  margin-top: 40px;
+  /* margin: 0vh 20vh 0vh 25vh; */
 }
-input{
-    background-color: transparent;
-    padding-left: 20px;
-    width: 100%;
-    height: 50px;
-    margin: 10px;
-    border-radius: 30px;
-    font-family: Stellar;
-    font-size: 24px;
-    border: 2px solid #f8f8f8;
+
+form {
+  margin-top: 20px;
 }
-.name>input{
-    width: 48%;
+
+.name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.name{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.branchyear {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-label{
-    display: flex;
-    font-size: 15px;
-    font-family: Stellar-Light;
-    margin-top: 20px;
-    margin-right: 190px;
+.input-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-label>input{
-    margin-top: 0%;
-    appearance: none;
-    -webkit-appearance: none;
-    border-radius: 50%;
-    height: 18px;
-    width: 18px;
+
+label {
+  display: flex;
+  font-size: 15px;
+  font-family: Stellar-Light;
+  align-items: center;
+  justify-content: center;
+  width: 30%;
+}
+
+input {
+  background-color: transparent;
+  padding-left: 20px;
+  width: 100%;
+  height: 30px;
+  border-radius: 30px;
+  font-family: Stellar;
+  font-size: 24px;
+  border: 2px solid #f8f8f8;
 }
 
 .star-1{
-    position: absolute;
-    top: 0;
-    right: 2%;
-
+  position: absolute;
+  top: 0;
+  right: 2%;
 }
 
 .star-3{
-    position: absolute;
-    top: 18%;
-    left: 20%;
-    width: 25px;
+  position: absolute;
+  top: 18%;
+  left: 20%;
+  width: 25px;
 }
 
 .star-2{
-    position: absolute;
-    bottom: 3%;
-    left: 0;
-
+  position: absolute;
+  bottom: 3%;
+  left: 0;
 }
 
+.line-4{
+  position: absolute;
+  bottom: 34%;
+  right: -4%;
+}
+
+.ellipse{
+  position: absolute;
+  bottom: 30%;
+  right: 4%;
+}
