--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -7,13 +7,15 @@ body{
 .eventDet{
     display: flex;
     justify-content:space-between;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 25%;
+    margin-right: 25%;
     margin-bottom: 5%;
     
 }
-.youthopia{
+.youthop{
     margin: 10vh 0px 0px 38%;
+
+    
 }
 .poster{
     background-color: white;
@@ -55,6 +57,7 @@ body{
 .register p{
     position: relative;
     left: 5%;
+    width: fit-content;
     
 }
 .horiLine{
@@ -102,13 +105,14 @@ body{
 .register .Counter p{
     margin-top: 10px;
     margin-right: 25px;
-    padding-left: 20px;
+    padding-left: 2px;
     margin-left: 0;
-    padding-top: 0px;
+    padding-top: 5px;
     background-color: transparent;
     border: 1px solid white;
     height: 50px;
     width: 50px;
+    
     color: white;
     border-radius: 5px;
 }
