--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -30,6 +30,7 @@
 .youthopia-logo img {
     height: 120px;
 }
+
 .heading {
     display: flex;
     align-items: center;
@@ -134,6 +135,7 @@
     justify-content: center;
     align-items: center;
     background-position: center;
+    padding-bottom: 10px;
 }
 
 /* 
