fixed duplicate error

--- a/src/pages/Events/card/Card.css
+++ b/src/pages/Events/card/Card.css
@@ -29,7 +29,7 @@
             -webkit-text-fill-color: transparent;
             -webkit-background-clip: text;
 }
-.register{
+.register2{
     display: flex;
     justify-content: center;
     align-items: center;
