--- a/src/pages/Events/card/Card.css
+++ b/src/pages/Events/card/Card.css
@@ -3,7 +3,7 @@
     width: 65%;
     border-radius: 10px;
     /* margin: 95px; */
-    margin-bottom: 5%;
+    margin-bottom: 5vh;
     
     background-color: transparent;
 }
