--- a/src/components/AboutUsImgBox/AboutUsImgBox.css
+++ b/src/components/AboutUsImgBox/AboutUsImgBox.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0 100px;
+    /* margin: 0 100px; */
     height: 180px;
     width: 170px;
     /* background-color: #fff; */
