--- a/src/pages/Events/Events.css
+++ b/src/pages/Events/Events.css
@@ -81,6 +81,80 @@
     
     
 }
+@media screen and (max-width: 768px){
+    .card-Container {
+        grid-template-columns: repeat(1, minmax(10rem, 1fr));
+        margin-left: 25%;  /* For tablets */
+    }
+    .secNavBar>.a {
+        font-size: 3.5vw;
+        margin:0 30px 0 30px;
+    }
+    .secNavBar {
+        margin: 0px 10px 0px 15%;
+    }
+    .youImg {
+        margin: 10vh 0px 0px 15%;
+    }
+
+}
+@media screen and (min-width: 768px)  {
+    .card-Container {
+        grid-template-columns: repeat(2, minmax(10rem, 1fr));
+        margin-left: 20vw; 
+    }
+    .youImg {
+        margin: 10vh 0px 0px 28%;
+    }
+    .secNavBar>.a {
+        font-size: 3.5vw;
+        margin:0 40px 0 40px;
+    }
+    .secNavBar {
+        margin: 0px 10px 0px 18%;
+    }
+    
+}
+
+@media screen and (min-width: 1025px)  {
+    .card-Container {
+        grid-template-columns: repeat(3, minmax(10rem, 0.5fr)); 
+        margin-left: 12vw;
+    }
+    .youImg {
+        margin: 10vh 0px 0px 35%;
+    }
+    .secNavBar>.a {
+        font-size: 3.5vw;
+        margin:0 60px 0 60px;
+    }
+    .secNavBar {
+        margin: 0px 10px 0px 18%;
+    }
+}
+
+@media screen and (min-width: 1366px) {
+    .card-Container {
+        grid-template-columns: repeat(3, minmax(10rem, 1fr)); /* For tablets */
+    }
+    .youImg {
+        margin: 10vh 0px 0px 35%;
+    }
+    .secNavBar>.a {
+        font-size: 2.5vw;
+        margin:0 120px 0 120px;
+    }
+    .secNavBar {
+        margin: 0px 10px 0px 18%;
+    }
+}
+
+@media screen and (min-width: 1680px) {
+    .card-Container {
+        grid-template-columns: repeat(3, minmax(10rem, 1fr)); /* For tablets */
+    }
+}
+
 
 
 
