--- a/src/components/Ticket/Ticket.css
+++ b/src/components/Ticket/Ticket.css
@@ -1,61 +1,78 @@
-.rec{
-    width: 80vh;
+.Ticket-container{
+    width:100vw;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    padding: 1rem 3rem;
+}
+.rec{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
    
 }
 
 .Logos{
-    height: 3vh;
+    width: 100%;
+    height: 4vw;
     display: flex;
-    gap:62vh;
-    margin-left: 5vh ;
-    position: absolute;
+    justify-content: space-between;
     z-index: 1;
-   top: 3vh;
+   top: 3vw;
+   margin-top: 3rem;
 }
 .Ticket{
-    font-family: 'Stellar', sans-serif;
     font-size: 1.5vw;
-    top:6vh;
-    margin-left: 55vh;
-    position: absolute;
-    z-index: 1;
-    color:white;
-}
-.Details{
     font-family: 'Stellar', sans-serif;
-    font-size: 1vw;
-    top:10vh;
-    margin-left: 52vh;
-    line-height: 3.5vh;
+    top:6vh;
+    margin-left: 55vw;
     position: absolute;
     z-index: 1;
     color:white;
 }
+
+.elements{
+ display: flex;
+ width: 100%;
+ align-items: center;
+ justify-content: center;
+ z-index: 2;
+}
+
 .Textyouth {
-    color:white;
-    top:10vh;
-    position: absolute;
-    z-index: 1;
-    margin-left: 9vh;
-    height: 13vh;
-}
+   
+    width: 50vw;
+    border: 2px;
 
-.Line {
-    top:4vh;
-    position: absolute;
-    z-index: 1;
-    margin-left: 50vh;
-    height:19vh;
 }
-.group{
-    top: -1.5vh;
-    position: absolute;
-    z-index: 1;
-    margin-left: 35vh;
-    height: 30vh;
-    width: 15vh;
+.image1{
+    border-right: 2px solid white;
+    padding: 1.5rem 0;
+    width:70%;
+    display: flex;
+    justify-content: center;
 }
-
+.Ticket-details{
+    color: white;
+    padding-left: 30px;
+    width: 30%;
+}
+.Ticket-details p{
+    font-size: 1.5rem;
+    line-height: 2.8rem;
+    text-align: left;
+    /* line-height: 3.5vw; */
+    font-family: Stellar , sans-serif;
+}
+.head{
+    font-weight: 200;
+   text-align: center !important;
+   padding-bottom: 20px;
+   font-size: 2.1rem !important;
+    
+}
