--- a/src/components/home-compo/main.css
+++ b/src/components/home-compo/main.css
@@ -205,6 +205,7 @@ position: relative;
 @media (max-width: 768px) {
     .DIT {
         margin-top: 50vh;
+        margin-left: 4%;
     }
     .main-page{
         height: 120vh;
@@ -212,6 +213,11 @@ position: relative;
     .clg-logo{
         width: 60px;
     }
+    .RowTwo{
+        margin-left: 10%;
+        width: 600px;
+    }
+    
 }
 
 @media (max-width: 1024px) {
@@ -223,6 +229,10 @@ position: relative;
     }
     .clg-logo{
         width: 60px;
+    }
+    .RowTwo{
+        margin-left: 13%;
+        
     }
 }
 @media (min-width: 1200px){
