--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -111,3 +111,77 @@ label>input{
     right: 4%;
 
 }
+@media (max-width: 768px){
+    .Login{
+        height: 110vh;
+        margin-bottom: 20vh;
+        margin-top: 10vh;
+        border-radius: 75px;
+    }
+    .Login input{
+        width: 120%;
+    }
+    .Login label input{
+        width: 10%;
+    }
+    .Login label{
+        width: 80%;
+        margin-left: 10%;
+    }
+}
+@media (min-width: 768px){
+    .Login{
+        height: 110vh;
+        margin-bottom: 20vh;
+        margin-top: 10vh;
+    }
+    .Login input{
+        width: 100%;
+    }
+    .Login label input{
+        width: 10%;
+    }
+    .Login label{
+        width: 80%;
+        margin-left: 10%;
+    }
+}
+@media (min-width: 1024px){}
+@media (min-width: 1200px){
+    .Login{
+        height: 100vh;
+        margin-bottom: 10vh;
+    }
+    .Login input{
+        width: 60%;
+    }
+    label{
+        width: 40%;
+        margin-top: 10px;
+    }
+    .Login label input{
+        width: 10%;
+        margin: 0;
+        padding: 0;
+    }
+}
+@media (min-width: 1600px){
+    .Login{
+        height: 100vh;
+        margin-bottom: 10vh;
+    }
+    .Login input{
+        width: 60%;
+    }
+    label{
+        width: 40%;
+        margin-top: 10px;
+    }
+    .Login label input{
+        width: 10%;
+        margin: 0;
+        padding: 0;
+    }
+}
+@media (min-width: 1800px){}
+
