--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,4 +1,4 @@
-.LoginContainer{
+.LoginContainer {
     background-image: url(../../assets/background.png);
     display: flex;
     justify-content: center;
@@ -9,7 +9,8 @@
     padding: 0;
 
 }
-.Login{
+
+.Login {
     position: relative;
     background-color: rgba(0, 0, 0, 0.71);
     border-radius: 138px;
@@ -25,38 +26,43 @@
     margin-top: 40px;
     /* margin: 0vh 20vh 0vh 25vh; */
 }
-.Login>form{
+
+.Login>form {
     display: flex;
     flex-direction: column;
     width: 60%;
     margin-top: 30px;
 
 }
-input{
+
+input {
     background-color: transparent;
     width: 58%;
     padding-left: 20px;
-    height: 50px;
+    height: auto !important;
     margin: 10px;
     border-radius: 30px;
     font-family: Stellar;
     font-size: 24px;
     border: 2px solid #f8f8f8;
 }
-.login-details{
+
+.login-details {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-label{
+
+label {
     display: flex;
     font-size: 15px;
     font-family: Stellar-Light;
     margin-top: 20px;
     margin-left: 30%;
 }
-label>input{
+
+label>input {
     margin-top: 0%;
     background-color: transparent;
     /* appearance: none;
@@ -66,7 +72,7 @@ label>input{
     width: 18px;
 }
 
-.login-btn{
+.login-btn {
     border-radius: 35px;
     border: 1px solid #FFF;
     width: 130px;
@@ -78,34 +84,34 @@ label>input{
     margin-top: 50px;
 }
 
-.star-1{
+.star-1 {
     position: absolute;
     top: 0;
     right: 2%;
 
 }
 
-.star-3{
+.star-3 {
     position: absolute;
     top: 18%;
     left: 20%;
     width: 25px;
 }
 
-.star-2{
+.star-2 {
     position: absolute;
     bottom: 3%;
     left: 0;
 
 }
 
-.line-4{
+.line-4 {
     position: absolute;
     bottom: 34%;
     right: -4%;
 }
 
-.ellipse{
+.ellipse {
     position: absolute;
     bottom: 30%;
     right: 4%;
