--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -157,7 +157,7 @@ input {
   background-color: transparent;
   padding-left: 20px;
   width: 100%;
-  height: 30px;
+  /* height: 30px; */
   border-radius: 30px;
   font-family: Stellar;
   font-size: 24px;
