--- a/src/components/home-compo/main.css
+++ b/src/components/home-compo/main.css
@@ -1,7 +1,7 @@
 .main-page {
     height: 100vh;
     width: 100vw;
-    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.7)), url(../../assets/background.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(../../assets/background.png);
     background-size: cover;
     background-repeat: no-repeat;
     filter: brightness(140%);
@@ -15,8 +15,8 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
-    align-items: center; 
-    justify-content: center; 
+    align-items: center;
+    justify-content: center;
     margin-top: 30px;
 }
 
@@ -27,26 +27,21 @@
     align-items: center;
     justify-content: center;
 }
-
 .RowTwo img {
     height: 50vh;
 }
-
 .inner-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100vw;
 }
-
 .clg-logo {
     margin: 10px;
 }
-
 .inner-container .clg-logo-center {
     margin-right: 50px;
 }
-
 .rndm-images .star-1 {
     position: absolute;
     top: 65%;
@@ -55,7 +50,6 @@
     animation-duration: 1.2s;
     animation-iteration-count: infinite;
 }
-
 .rndm-images .star-2 {
     position: absolute;
     top: 12%;
@@ -64,7 +58,6 @@
     animation-duration: 1s;
     animation-iteration-count: infinite;
 }
-
 .rndm-images .star-3 {
     position: absolute;
     top: 18%;
@@ -89,13 +82,12 @@
     left: 0;
 }
 
-.RowTwo{
+.RowTwo {
     padding: 0 1rem;
     max-width: 950px;
     position: relative;
 }
-
-.elipse{
+.elipse {
     position: absolute;
     right: 0;
     top: 0;
@@ -106,19 +98,15 @@
     align-items: center;
     z-index: 0;
 }
-
-
-.elipse> div{
-width: 40%;
-position: relative;
+.elipse>div {
+    width: 40%;
+    position: relative;
 }
-
-.elipse> div >img{
+.elipse>div>img {
     width: 100%;
     height: auto;
 }
-
-.elipse> div >div{
+.elipse>div>div {
     position: absolute;
     top: 0;
     right: 0;
@@ -128,31 +116,21 @@ position: relative;
     justify-content: flex-end;
     align-items: flex-start; */
 }
-
-.elipse> div >div>div{
+.elipse>div>div>div {
     animation: xAxis 3s infinite ease-in;
     height: 100%;
 }
-
-.elipse> div >div>div>div{
+.elipse>div>div>div>div {
     width: 100%;
     height: 100%;
     animation: yAxis 3s infinite ease-out;
 }
-
-.elipse> div >div>div>div> img{
+.elipse>div>div>div>div>img {
     width: 40px;
     height: auto;
     margin-left: auto;
 }
-
-
-
-
-
-
-
-.elipse2{
+.elipse2 {
     position: absolute;
     right: 0;
     top: 0;
@@ -163,18 +141,15 @@ position: relative;
     align-items: center;
     z-index: 0;
 }
-
-.elipse2> div{
-width: 40%;
-position: relative;
+.elipse2>div {
+    width: 40%;
+    position: relative;
 }
-
-.elipse2> div >img{
+.elipse2>div>img {
     width: 100%;
     height: auto;
 }
-
-.elipse2> div >div{
+.elipse2>div>div {
     position: absolute;
     top: 0;
     right: 0;
@@ -184,123 +159,141 @@ position: relative;
     justify-content: flex-end;
     align-items: flex-start; */
 }
-
-.elipse2> div >div>div{
+.elipse2>div>div>div {
     animation: xAxis2 2.8s infinite ease-in;
     height: 100%;
 }
-
-.elipse2> div >div>div>div{
+.elipse2>div>div>div>div {
     width: 100%;
     height: 100%;
     animation: yAxis2 2.8s infinite ease-out;
 }
-
-.elipse2> div >div>div>div> img{
+.elipse2>div>div>div>div>img {
     width: 20px;
     height: auto;
     margin-left: auto;
 }
-
-@media (max-width: 768px) {
+@media (min-width:320px) and (max-width:424px) {
     .DIT {
-        margin-top: 50vh;
-        margin-left: 12%;
-        width: 80%;
+        margin-top: 30vh;
+        margin-left: 20%;
+        width: 60%;
     }
-    .main-page{
-        height: 120vh;
+    .main-page {
+        height: 128vh   ;
     }
-    .clg-logo{
+    .clg-logo {
         width: 60px;
     }
-    .RowTwo{
+    .RowTwo {
         margin-left: 10%;
         width: 70%;
     }
-    
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 425px) and (max-width:524px){
     .DIT {
-        margin-top: 20vh;
+        margin-top: 30vh;
+        margin-left: 20%;
+        width: 60%;
     }
-    .main-page{
-        height: 120vh;
+    .main-page {
+        height: 128vh   ;
     }
-    .clg-logo{
+    .clg-logo {
         width: 60px;
     }
-    .RowTwo{
-        margin-left: 13%;
-        
+    .RowTwo {
+        margin-left: 10%;
+        width: 70%;
     }
 }
-@media (min-width: 1200px){
-    .main-page{
+@media (min-width: 525px) and (max-width:768px) {
+    .DIT {
+        margin-top: 25vh;
+        margin-left: 12%;
+        width: 80%;
+    }
+    .main-page {
+        height: 135vh   ;
+    }
+    .clg-logo {
+        width: 60px;
+    }
+    .RowTwo {
+        margin-left: 10%;
+        width: 70%;
+    }
+}
+@media (min-width:769px) and (max-width: 1024px) {
+    .DIT {
+        margin-top: 24vh;
+    }
+    .main-page {
+        height: 130vh;
+    }
+    .clg-logo {
+        width: 60px;
+    }
+    .RowTwo {
+        margin-left: 13%;
+    }
+}
+@media (min-width: 1200px) {
+    .main-page {
         height: 110vh;
     }
 }
 @media (min-width: 1600px) {
-    .main-page{
-        height:100vh
+    .main-page {
+        height: 100vh
     }
 }
 @media (min-width: 1800px) {
-    .main-page{
-        height:100vh
+    .main-page {
+        height: 100vh
     }
 }
-
-
-
-.youthopia{
+.youthopia {
     width: 100%;
-    
-}
 
+}
 @keyframes twinkle-1 {
     50% {
-      transform: scale(0.9);
-      opacity: 0.2;
+        transform: scale(0.9);
+        opacity: 0.2;
     }
-  }
-
-  @keyframes twinkle-2 {
+}
+@keyframes twinkle-2 {
     20% {
-      transform: scale(0.5);
-      opacity: 0.5;
+        transform: scale(0.5);
+        opacity: 0.5;
     }
-  }
-
-  @keyframes xAxis {
+}
+@keyframes xAxis {
     50% {
         animation-timing-function: ease-in;
         transform: translateX(calc(-100% + 40px));
         /* opacity: 0.8; */
         /* scale: 0.8; */
-      }
-  }
-  
-  @keyframes yAxis {
+    }
+}
+@keyframes yAxis {
     50% {
         animation-timing-function: ease-out;
         transform: translateY(calc(100% - 40px));
         /* scale: 0.8; */
-      }
-  }
-
-
-  @keyframes xAxis2 {
+    }
+}
+@keyframes xAxis2 {
     50% {
         animation-timing-function: ease-in;
         transform: translateX(calc(-100% + 20px));
-      }
-  }
-  
-  @keyframes yAxis2 {
+    }
+}
+@keyframes yAxis2 {
     50% {
         animation-timing-function: ease-out;
         transform: translateY(calc(100% - 20px));
-      }
-  }
+    }
+}
