--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -119,7 +119,7 @@ hr {
     margin-top: -40px;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .profile-img {
         width: 100px;
         height: 100px;
