--- a/src/pages/Events/Events.css
+++ b/src/pages/Events/Events.css
@@ -1,7 +1,7 @@
 .events {
     background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.7)), url('../../assets/background.png');
     position: relative;
-    height: 100vh;
+    height: 150vh;
     width: 100%;
     background-size: 100% 100%;
     font-family: Stellar;
@@ -78,6 +78,7 @@
     grid-gap: 1rem;
     margin-left: 10%;
     margin-top: 5%;
+    overflow: scroll;
     
     
 }
@@ -92,9 +93,11 @@
     }
     .secNavBar {
         margin: 0px 10px 0px 0%;
+        width: 60%;
     }
     .youImg {
-        margin: 10vh 0px 0px 0%;
+        margin: 10vh 0px 0px 15%;
+        width: 60%;
     }
 
 }
