--- a/src/components/home-compo/main.css
+++ b/src/components/home-compo/main.css
@@ -175,7 +175,7 @@
 }
 @media (min-width:320px) and (max-width:424px) {
     .DIT {
-        margin-top: 30vh;
+        margin-top: 10vh;
         margin-left: 20%;
         width: 60%;
     }
@@ -188,6 +188,7 @@
     .RowTwo {
         margin-left: 10%;
         width: 70%;
+        margin-top: -27vh;
     }
 }
 
@@ -206,6 +207,7 @@
     .RowTwo {
         margin-left: 10%;
         width: 70%;
+        margin-top: -27vh;
     }
 }
 @media (min-width: 525px) and (max-width:768px) {
@@ -237,6 +239,7 @@
     }
     .RowTwo {
         margin-left: 13%;
+        margin-top: 10px;
     }
 }
 @media (min-width: 1200px) {
